--- a/index.html
+++ b/index.html
@@ -1,2 +1,106 @@
-Hello World!
-Placeholder for my summary, resume, and contact information.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Jason Kim</title>
+	<meta charset="utf-8">
+	<!-- Links and scripts for Bootstrap 4 -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+	<!-- Link for Raleway from Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+	<!-- Link for Quicksand from Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+	<style>
+		/* Raleway as default for body */
+		body {
+		font-family: 'Raleway', sans-serif;
+		}
+		.fakeimg {
+		height: 200px;
+		background: #aaa;
+		}
+		/* For the title text 'Jason Kim' */
+		.display-3 {
+			font-family: 'Quicksand', sans-serif;
+			color: white;
+			margin-bottom: 20px;
+		}
+		/* Default and hover colors for nav links */
+		.nav-link {
+			color: white;
+		}
+		.nav-link:hover {
+			color: #EF2D56;
+		}
+	</style>
+</head>
+<body>
+	<!-- Purple top jumbotron with my name and links to the three pages. -->
+	<div class="jumbotron jumbotron-fluid" style="margin-bottom:0;background-color:#2D1637; text-align: center">
+		<h1 class="display-3">Jason Kim</h1>
+		<div class="row">
+			<!-- Two filler cols of width 3 to 'center' the links as much as possible -->
+			<div class="col-lg-3"></div>
+			<div class="col-lg-2">
+				<a class="nav-link" href="#"><h3>Information</h3></a>
+			</div>
+			<div class="col-lg-2">
+				<a class="nav-link" href="#"><h3>Academics</h3></a>
+			</div>
+			<div class="col-lg-2">
+				<a class="nav-link" href="#"><h3>Projects</h3></a>
+			</div>
+			<div class="col-lg-3"></div>
+		</div>
+	</div>
+
+<div class="container" style="margin-top:30px">
+  <div class="row">
+    <div class="col-sm-4">
+      <h2>About Me</h2>
+      <h5>Photo of me:</h5>
+      <div class="fakeimg">Fake Image</div>
+      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+      <h3>Some Links</h3>
+      <p>Lorem ipsum dolor sit ame.</p>
+      <ul class="nav nav-pills flex-column">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+      </ul>
+      <hr class="d-sm-none">
+    </div>
+    <div class="col-sm-8">
+      <h2>TITLE HEADING</h2>
+      <h5>Title description, Dec 7, 2017</h5>
+      <div class="fakeimg">Fake Image</div>
+      <p>Some text..</p>
+      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      <br>
+      <h2>TITLE HEADING</h2>
+      <h5>Title description, Sep 2, 2017</h5>
+      <div class="fakeimg">Fake Image</div>
+      <p>Some text..</p>
+      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    </div>
+  </div>
+</div>
+
+<div class="jumbotron text-center" style="margin-bottom:0">
+  <p>Footer</p>
+</div>
+
+</body>
+</html>
