--- a/index.html
+++ b/index.html
@@ -35,13 +35,17 @@
 		.nav-link:hover {
 			color: #EF2D56;
 		}
+		.jumbotron {
+			margin-top: -30px;
+		}
 	</style>
 </head>
 <body>
 	<!-- Purple top jumbotron with my name and links to the three pages. -->
-	<div class="jumbotron jumbotron-fluid" style="margin-bottom:0;background-color:#2D1637; text-align: center">
+	<div class="jumbotron jumbotron-fluid" style="background-color:#2D1637; text-align: center">
 		<h1 class="display-3">Jason Kim</h1>
-		<div class="row">
+		<!-- Trick to reduce bottom margin of jumbotron -->
+		<div class="row" style="margin-bottom: -30px">
 			<!-- Two filler cols of width 3 to 'center' the links as much as possible -->
 			<div class="col-lg-3"></div>
 			<div class="col-lg-2">
@@ -56,6 +60,8 @@
 			<div class="col-lg-3"></div>
 		</div>
 	</div>
+
+<!-- Stuff to work on for tomorrow -->
 
 <div class="container" style="margin-top:30px">
   <div class="row">
