--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
 			color: white;
 		}
 		.nav-link:hover {
-			color: #EF2D56;
+			color: #FFA500;
 		}
 		.jumbotron {
 			margin-top: -30px;
+			background-image: url("img/test.jpg");
+			background-size: cover;
+			height: 100%;
 		}
 	</style>
 </head>
