--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
 	<!-- Purple top jumbotron with my name and links to the three pages. -->
-	<div class="jumbotron jumbotron-fluid" style="background-color:#2D1637; text-align: center">
+	<div class="jumbotron jumbotron-fluid" style="text-align: center">
 		<h1 class="display-3">Jason Kim</h1>
 		<!-- Trick to reduce bottom margin of jumbotron -->
 		<div class="row" style="margin-bottom: -30px">
