--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			color: #FFA500;
 		}
 		.jumbotron {
+			background-color: black;
 			margin-top: -30px;
 			background-image: url("img/test.jpg");
 			background-size: cover;
@@ -48,7 +49,7 @@
 	<div class="jumbotron jumbotron-fluid" style="text-align: center">
 		<h1 class="display-3">Jason Kim</h1>
 		<!-- Trick to reduce bottom margin of jumbotron -->
-		<div class="row" >
+		<div class="row" style="margin-bottom: -30px">
 			<!-- Two filler cols of width 3 to 'center' the links as much as possible -->
 			<div class="col-lg-3"></div>
 			<div class="col-lg-2">
