--- a/index.html
+++ b/index.html
@@ -48,20 +48,22 @@
 	<!-- Purple top jumbotron with my name and links to the three pages. -->
 	<div class="jumbotron jumbotron-fluid" style="text-align: center">
 		<h1 class="display-3">Jason Kim</h1>
-		<!-- Trick to reduce bottom margin of jumbotron -->
-		<div class="row" style="margin-bottom: -30px">
-			<!-- Two filler cols of width 3 to 'center' the links as much as possible -->
-			<div class="col-lg-3"></div>
-			<div class="col-lg-2">
-				<a class="nav-link" href="#"><h3>Information</h3></a>
+		<div class="container-fluid">
+			<!-- Trick to reduce bottom margin of jumbotron -->
+			<div class="row" style="margin-bottom: -30px">
+				<!-- Two filler cols of width 3 to 'center' the links as much as possible -->
+				<div class="col-lg-3"></div>
+				<div class="col-lg-2">
+					<a class="nav-link" href="#"><h3>Information</h3></a>
+				</div>
+				<div class="col-lg-2">
+					<a class="nav-link" href="#"><h3>Academics</h3></a>
+				</div>
+				<div class="col-lg-2">
+					<a class="nav-link" href="#"><h3>Projects</h3></a>
+				</div>
+				<div class="col-lg-3"></div>
 			</div>
-			<div class="col-lg-2">
-				<a class="nav-link" href="#"><h3>Academics</h3></a>
-			</div>
-			<div class="col-lg-2">
-				<a class="nav-link" href="#"><h3>Projects</h3></a>
-			</div>
-			<div class="col-lg-3"></div>
 		</div>
 	</div>
 
