--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,141 @@
-Placeholder for my personal projects.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Jason Kim</title>
+	<meta charset="utf-8">
+	<!-- Links and scripts for Bootstrap 4 -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+	<!-- Link for Raleway from Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+	<!-- Link for Quicksand from Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+	<style>
+		/* Raleway as default for body */
+		body {
+			font-family: 'Raleway', sans-serif;
+		}
+		.fakeimg {
+			height: 200px;
+			background: #aaa;
+		}
+		/* For the title text 'Jason Kim' */
+		.display-3 {
+			font-family: 'Quicksand', sans-serif;
+			color: white;
+			margin-bottom: 20px;
+		}
+		/* Default and hover colors for nav links */
+		.nav-link {
+			color: white;
+		}
+		.nav-link:hover {
+			color: #FFA500;
+		}
+		.jumbotron {
+			background-color: black;
+			margin-top: -30px;
+			background-image: url("img/test.jpg");
+			background-size: cover;
+			height: 100%;
+			width: 100%;
+		}
+	</style>
+</head>
+<body>
+	<!-- Purple top jumbotron with my name and links to the three pages. -->
+	<div class="jumbotron jumbotron-fluid" style="text-align: center">
+		<h1 class="display-3">Jason Kim</h1>
+		<div class="container-fluid">
+			<!-- Trick to reduce bottom margin of jumbotron -->
+			<div class="row" style="margin-bottom: -30px">
+				<!-- Two filler cols of width 3 to 'center' the links as much as possible -->
+				<div class="col-lg-3"></div>
+				<div class="col-lg-2">
+					<a class="nav-link" href="#"><h3>Information</h3></a>
+				</div>
+				<div class="col-lg-2">
+					<a class="nav-link" href="#"><h3>Academics</h3></a>
+				</div>
+				<div class="col-lg-2">
+					<a class="nav-link" href="#"><h3>Projects</h3></a>
+				</div>
+				<div class="col-lg-3"></div>
+			</div>
+		</div>
+	</div>
+	<!-- Container for rows, in order to list projects -->
+	<div class="container" style="margin-top:30px; margin-bottom: 30px">
+		<div class="row">
+			<div class="col">
+				<div class="alert alert-success">
+					<p style="margin-bottom: 0px">The following is a list of my personal projects and group projects where I have contributed significantly. Their source code can be viewed <a href="https://github.com/jasonkimprojects?tab=repositories" style="color: orange">here</a> in my GitHub account. Clicking on the title of each project links to its repository.</p>
+				</div>
+			</div>
+		</div>
+		<div class="row" style="margin-top:30px">
+			<div class="col">
+				<h1><b>Personal Projects</b></h1>
+				<hr>
+			</div>
+		</div>
+		<div class="row" style="margin-top:30px">
+			<div class="col">
+				<h3><a href="https://github.com/jasonkimprojects/bitmapparser" style="color: orange">BitmapParser (C++)</a></h3>
+				<p><b>Keywords:</b> <i>Library, File I/O, Image processing, Data structures, Error handling, Object oriented programming</i></p>
+				<p>A short library for bitmap image reading and writing. Contains basic image editing functions (reflection, transposition, rotation, crop, superimpose, color filters). Useful for extracting pixels and their RGB values as vectors of structs of plain old data.</p>
+			</div>
+		</div>
+		<div class="row" style="margin-top:30px">
+			<div class="col">
+				<h3><a href="https://github.com/jasonkimprojects/easylsb" style="color: orange">EasyLSB (C++)</a></h3>
+				<p><b>Keywords:</b> <i>Steganography, Least significant bit, Bit manipulation, Error handling, Inheritance, Custom iterator</i></p>
+				<p>A program for encoding and decoding text messages inside bitmap images using least significant bit steganography. Results in little to no visible difference in the image. Includes my BitmapParser library.</p>
+			</div>
+		</div>
+		<div class="row" style="margin-top:30px">
+			<div class="col">
+				<h3><a href="https://github.com/jasonkimprojects/jasonkimprojects.github.io" style="color: orange">jasonkimprojects.github.io (HTML, CSS, Bootstrap)</a></h3>
+				<p>This website. Contains links to my GitHub and LinkedIn profile and resume. Overview of my academic and personal work.</p>
+			</div>
+		</div>
+		<div class="row" style="margin-top:30px">
+			<div class="col">
+				<h3><a href="https://github.com/jasonkimprojects/htc-evo-4gplus-evolved" style="color: orange">Evo(lved) (Android)</a></h3>
+				<p><b>Keywords:</b> <i>Custom firmware, Scripting, Linux, Optimization</i></p>
+				<p>ROM for my first smartphone, the HTC Evo 4G+. Android 2.3 Gingerbread based on stock firmware.</p>
+			</div>
+		</div>		
+		<div class="row" style="margin-top:30px">
+			<div class="col">
+				<h1><b>Group Projects</b></h1>
+				<hr>
+			</div>
+		</div>
+		<div class="row" style="margin-top:30px">
+			<div class="col">
+				<h3><a href="https://github.com/jasonkimprojects/2048-and-pong-from-scratch" style="color: orange">2048 (Java, Swing)</a></h3>
+				<p><b>Keywords:</b> <i>Games, Matrix operations, GUI programming, Listeners</i></p>
+				<p>First part of AP Computer Science final project during high school. Replica of the original game built from scratch. Exercise for graphics with the Swing widget toolkit and listening to keyboard inputs.</p>
+			</div>
+		</div>
+		<div class="row" style="margin-top:30px">
+			<div class="col">
+				<h3><a href="https://github.com/jasonkimprojects/2048-and-pong-from-scratch" style="color: orange">Pong (Java, Swing)</a></h3>
+				<p><b>Keywords:</b> <i>Games, GUI programming, Listeners</i></p>
+				<p>Second part of AP Computer Science final project during high school. Replica of the original game, also built from scratch. Another exercise for making graphical games and handling keyboard input.</p>
+			</div>
+		</div>
+		<div class="row" style="margin-top:30px">
+			<div class="col">
+				<h3><a href="https://github.com/jasonkimprojects/java-blackjack" style="color: orange">Blackjack (Java)</a></h3>
+				<p><b>Keywords:</b> <i>Object oriented programming, Testing, Data structures, Exception handling</i></p>
+				<p>Yet another AP Computer Science project, and the first game I made from scratch. Played on the command line, and supports multiple human players as well as naive computer players.</p>
+			</div>
+		</div>
+	</div>
+</body>
+</html>
