--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 	<!-- Link for Raleway from Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-	<!-- Link for Quicksand from Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+	<!-- Link for Julius Sans One from Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One&display=swap" rel="stylesheet">
 	<style>
 		/* Raleway as default for body */
 		body {
@@ -24,7 +24,7 @@
 		}
 		/* For the title text 'Jason Kim' */
 		.display-3 {
-			font-family: 'Quicksand', sans-serif;
+			font-family: 'Julius Sans One', sans-serif;
 			color: white;
 			margin-bottom: 20px;
 		}
