--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<!-- Two filler cols of width 3 to 'center' the links as much as possible -->
 				<div class="col-lg-3"></div>
 				<div class="col-lg-2">
-					<a class="nav-link" href="index.html"><h3>Information</h3></a>
+					<a class="nav-link" href="index.html" style="color: #FFA500"><h3>Information</h3></a>
 				</div>
 				<div class="col-lg-2">
 					<a class="nav-link" href="coursework.html"><h3>Academics</h3></a>
