--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
 					<a class="nav-link" href="coursework.html"><h3>Academics</h3></a>
 				</div>
 				<div class="col-lg-2">
-					<a class="nav-link" href="projects.html"><h3>Projects</h3></a>
+					<a class="nav-link" href="projects.html" style="color: #FFA500"><h3>Projects</h3></a>
 				</div>
 				<div class="col-lg-3"></div>
 			</div>
