--- a/coursework.html
+++ b/coursework.html
@@ -58,7 +58,7 @@
 					<a class="nav-link" href="index.html"><h3>Information</h3></a>
 				</div>
 				<div class="col-lg-2">
-					<a class="nav-link" href="coursework.html"><h3>Academics</h3></a>
+					<a class="nav-link" href="coursework.html" style="color: #FFA500"><h3>Academics</h3></a>
 				</div>
 				<div class="col-lg-2">
 					<a class="nav-link" href="projects.html"><h3>Projects</h3></a>
