--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 			font-family: 'Julius Sans One', sans-serif;
 			color: white;
 			margin-bottom: 20px;
+			margin-left: 10px;
+			margin-right: 10px;
 		}
 		/* Default and hover colors for nav links */
 		.nav-link {
