Working title margins

--- a/coursework.html
+++ b/coursework.html
@@ -27,6 +27,9 @@
 			font-family: 'Julius Sans One', sans-serif;
 			color: white;
 			margin-bottom: 20px;
+			margin-left: 50px;
+			margin-right: 50px;
+		}
 		}
 		/* Default and hover colors for nav links */
 		.nav-link {
