--- a/projects.html
+++ b/projects.html
@@ -87,14 +87,14 @@
 		<div class="row" style="margin-top:30px">
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/bitmapparser" style="color: orange">BitmapParser (C++)</a></h3>
-				<p><b>Keywords:</b> <i>Library, File I/O, Image processing, Data structures, Error handling, Object oriented programming</i></p>
+				<h6><span class="badge badge-light">Library</span> <span class="badge badge-light">File I/O</span> <span class="badge badge-light">Image processing</span> <span class="badge badge-light">Data structures</span> <span class="badge badge-light">Error handling</span> <span class="badge badge-light">Object oriented programming</span></h6>
 				<p>A short library for bitmap image reading and writing. Contains basic image editing functions (reflection, transposition, rotation, crop, superimpose, color filters). Useful for extracting pixels and their RGB values as vectors of structs of plain old data.</p>
 			</div>
 		</div>
 		<div class="row" style="margin-top:30px">
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/easylsb" style="color: orange">EasyLSB (C++)</a></h3>
-				<p><b>Keywords:</b> <i>Steganography, Least significant bit, Bit manipulation, Error handling, Inheritance, Custom iterator</i></p>
+				<h6><span class="badge badge-light">Steganography</span> <span class="badge badge-light">Least significant bit</span> <span class="badge badge-light">Bit manipulation</span> <span class="badge badge-light">Error handling</span> <span class="badge badge-light">Inheritance</span> <span class="badge badge-light">Custom iterator</span></h6>
 				<p>A program for encoding and decoding text messages inside bitmap images using least significant bit steganography. Results in little to no visible difference in the image. Includes my BitmapParser library.</p>
 			</div>
 		</div>
@@ -107,7 +107,7 @@
 		<div class="row" style="margin-top:30px">
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/htc-evo-4gplus-evolved" style="color: orange">Evo(lved) (Android)</a></h3>
-				<p><b>Keywords:</b> <i>Custom firmware, Scripting, Linux, Optimization</i></p>
+				<h6><span class="badge badge-light">Custom firmware</span> <span class="badge badge-light">Scripting</span> <span class="badge badge-light">Linux</span> <span class="badge badge-light">Optimization</span></h6>
 				<p>ROM for my first smartphone, the HTC Evo 4G+. Android 2.3 Gingerbread based on stock firmware.</p>
 			</div>
 		</div>		
@@ -120,21 +120,21 @@
 		<div class="row" style="margin-top:30px">
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/2048-and-pong-from-scratch" style="color: orange">2048 (Java, Swing)</a></h3>
-				<p><b>Keywords:</b> <i>Games, Matrix operations, GUI programming, Listeners</i></p>
+				<h6><span class="badge badge-light">Games</span> <span class="badge badge-light">Matrix operations</span> <span class="badge badge-light">GUI programming</span> <span class="badge badge-light">Listeners</span></h6>
 				<p>First part of AP Computer Science final project during high school. Replica of the original game built from scratch. Exercise for graphics with the Swing widget toolkit and listening to keyboard inputs.</p>
 			</div>
 		</div>
 		<div class="row" style="margin-top:30px">
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/2048-and-pong-from-scratch" style="color: orange">Pong (Java, Swing)</a></h3>
-				<p><b>Keywords:</b> <i>Games, GUI programming, Listeners</i></p>
+				<h6><span class="badge badge-light">Games</span> <span class="badge badge-light">GUI programming</span> <span class="badge badge-light">Listeners</span></h6>
 				<p>Second part of AP Computer Science final project during high school. Replica of the original game, also built from scratch. Another exercise for making graphical games and handling keyboard input.</p>
 			</div>
 		</div>
 		<div class="row" style="margin-top:30px">
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/java-blackjack" style="color: orange">Blackjack (Java)</a></h3>
-				<p><b>Keywords:</b> <i>Object oriented programming, Testing, Data structures, Exception handling</i></p>
+				<h6><span class="badge badge-light">Object oriented programming</span> <span class="badge badge-light">Testing</span> <span class="badge badge-light">Data structures</span> <span class="badge badge-light">Exception handling</span></h6>
 				<p>Yet another AP Computer Science project, and the first game I made from scratch. Played on the command line, and supports multiple human players as well as naive computer players.</p>
 			</div>
 		</div>
