--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
         <li class="nav-item">
           <a class="nav-link" id="link" href="https://www.linkedin.com/in/nosajmik" style="margin-top: 10px"><b>LinkedIn</b></a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" id="link" href="https://keybase.io/nosajmik" style="margin-top: 10px"><b>Keybase</b></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="link" href="files/resume.pdf" style="margin-top: 10px" download><b>Resume</b></a>
+        </li>
       </ul>
       <hr class="d-sm-none">
     </div>
