--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <div class="container" style="margin-top:60px; margin-bottom: 60px">
   <div class="row">
     <div class="col-sm-4" style="text-align: center">
-      <img src="img/profile.jpg" class="img-fluid" alt="Profile Picture" style="border: 5px solid; width: 100%">
+      <img src="img/profile.JPG" class="img-fluid" alt="Profile Picture" style="border: 5px solid; width: 100%">
       <hr>
       <h3>Contact me:</h3>
       <ul class="nav nav-pills flex-column">
