--- a/index.html
+++ b/index.html
@@ -79,36 +79,38 @@
 
 <!-- Stuff to work on for tomorrow -->
 
-<div class="container" style="margin-top:60px; margin-bottom: 60px">
+<div class="container" style="margin-top:30px; margin-bottom: 60px">
   <div class="row">
-    <div class="col-sm-4" style="text-align: center">
-      <img src="img/profile.JPG" class="img-fluid" alt="Profile Picture" style="border: 5px solid; width: 100%">
-      <hr>
-      <h3>Contact me:</h3>
-      <ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-          <a class="nav-link active" id="link-cell" style="margin-top: 10px"><b>+1 (224) 200-6674</b></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" id="link" href="mailto:nosajmik@umich.edu" style="margin-top: 10px"><b>nosajmik@umich.edu</b></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" id="link" href="files/resume.pdf" style="margin-top: 10px" download><b>Resume</b></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" id="link" href="https://github.com/jasonkimprojects" style="margin-top: 10px"><b>GitHub</b></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" id="link" href="https://www.linkedin.com/in/nosajmik" style="margin-top: 10px"><b>LinkedIn</b></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" id="link" href="https://keybase.io/nosajmik" style="margin-top: 10px"><b>Keybase</b></a>
-        </li>
-      </ul>
-      <hr class="d-sm-none">
+    <div class="col-md-4" style="text-align: center">
+    	<div class="col-md-12">
+		  <img src="img/profile.JPG" class="img-fluid" alt="Profile Picture" style="border: 5px solid">
+		  <hr>
+		  <h3>Contact me:</h3>
+		  <ul class="nav nav-pills flex-column" style="margin: auto">
+		    <li class="nav-item">
+		      <a class="nav-link active" id="link-cell" style="margin-top: 10px"><b>+1 (224) 200-6674</b></a>
+		    </li>
+		    <li class="nav-item">
+		      <a class="nav-link active" id="link" href="mailto:nosajmik@umich.edu" style="margin-top: 10px"><b>nosajmik@umich.edu</b></a>
+		    </li>
+		    <li class="nav-item">
+		      <a class="nav-link" id="link" href="files/resume.pdf" style="margin-top: 10px" download><b>Resume</b></a>
+		    </li>
+		    <li class="nav-item">
+		      <a class="nav-link" id="link" href="https://github.com/jasonkimprojects" style="margin-top: 10px"><b>GitHub</b></a>
+		    </li>
+		    <li class="nav-item">
+		      <a class="nav-link" id="link" href="https://www.linkedin.com/in/nosajmik" style="margin-top: 10px"><b>LinkedIn</b></a>
+		    </li>
+		    <li class="nav-item">
+		      <a class="nav-link" id="link" href="https://keybase.io/nosajmik" style="margin-top: 10px"><b>Keybase</b></a>
+		    </li>
+		  </ul>
+		  <hr class="d-md-none" style="margin-bottom: 30px">
+		</div>
     </div>
-    <div class="col-sm-8">
-    	<div style="margin-left: 30px">
+    <div class="col-md-8">
+    	<div class="col-md-12">
 	      <h2 style="color: #FFA500">Hi, I'm Jason!</h2>
 	      <p>For official purposes, my legal first name is Jong Sung. I go by Jason, nevertheless, for two reasons: it’s easier to pronounce, and most websites that parse my name delimit the space and call me Jong. Call me by whatever is easiest for you! My pronouns are <b>he, him, and his.</b></p>
 	      <br>
@@ -120,12 +122,22 @@
 	      <br>
 	      <h2>My website</h2>
 	      <p>Is also available in 한국어 (Korean), my mother tongue alongside English, as well as Español (Spanish) which I <i>kind of</i> speak. Feel free to grab a copy of my resume or contact me through the links on the left!</p>
-	      <br>
+	      <div style="text-align: center; margin-top: 60px">
+	    	<div class="btn-group">
+	    		<a href="#" role="button" class="btn btn-light" style="color: #FFA500">English</a>
+	    	</div>
+	    	<div class="btn-group" style="margin-left: 30px">
+	    		<a href="#" role="button" class="btn btn-light">한국어</a>
+	    	</div>
+	    	<div class="btn-group" style="margin-left: 30px">
+	    		<a href="#" role="button" class="btn btn-light">Español</a>
+	    	</div>
+		  </div>
 	      <hr>
-	      <h6><small>Background image credits: Hedaetul Islam (https://www.pexels.com/@hedaetul)</small></h6>
+	      <h6><small>Background image credits: Hedaetul Islam (<a href="https://www.pexels.com/@hedaetul">https://www.pexels.com/@hedaetul)</a></small></h6>
 	      <h6><small>Made from scratch with passion, with the help of Bootstrap for mobile and desktop compatibility.</small></h6>
-    </div>
-  </div>
+	  </div>
+  	</div>
 </div>
 </body>
 </html>
