--- a/index.html
+++ b/index.html
@@ -122,16 +122,24 @@
 	      <br>
 	      <h2>My website</h2>
 	      <p>Is also available in 한국어 (Korean), my mother tongue alongside English, as well as Español (Spanish) which I <i>kind of</i> speak. Feel free to grab a copy of my resume or contact me through the links on the left!</p>
-	      <div style="text-align: center; margin-top: 60px">
-	    	<div class="btn-group">
-	    		<a href="#" role="button" class="btn btn-light" style="color: #FFA500">English</a>
-	    	</div>
-	    	<div class="btn-group" style="margin-left: 30px">
-	    		<a href="#" role="button" class="btn btn-light">한국어</a>
-	    	</div>
-	    	<div class="btn-group" style="margin-left: 30px">
-	    		<a href="#" role="button" class="btn btn-light">Español</a>
-	    	</div>
+	      <div class="container" style="text-align: center; margin-top: 60px">
+	      	<div class="row">
+	      		<div class="col-md-4">
+			    	<div class="btn-group">
+			    		<a href="#" role="button" class="btn btn-light" style="color: #FFA500">English</a>
+			    	</div>
+			    </div>
+			    <div class="col-md-4">
+			    	<div class="btn-group">
+			    		<a href="#" role="button" class="btn btn-light">한국어</a>
+			    	</div>
+			    </div>
+			    <div class="col-md-4">
+			    	<div class="btn-group">
+			    		<a href="#" role="button" class="btn btn-light">Español</a>
+			    	</div>
+			    </div>
+		    </div>
 		  </div>
 	      <hr>
 	      <h6><small>Background image credits: Hedaetul Islam (<a href="https://www.pexels.com/@hedaetul">https://www.pexels.com/@hedaetul)</a></small></h6>
