Fixed language selector

--- a/index.html
+++ b/index.html
@@ -122,20 +122,12 @@
 	      <br>
 	      <h2>My website</h2>
 	      <p>Is also available in 한국어 (Korean), my mother tongue alongside English, as well as Español (Spanish) which I <i>kind of</i> speak. Feel free to grab a copy of my resume or contact me through the links on the left!</p>
-	      <div class="container" style="text-align: center; margin-top: 40px">
+	      <div class="container" style="text-align: center; margin-top: 50px; margin-bottom: 30px">
 	      	<div class="row">
-	      		<div class="col-md-4">
-			    	<div class="btn-group" style="margin-top: 20px">
+	      		<div class="col-md-12">
+			    	<div class="btn-group">
 			    		<a href="#" role="button" class="btn btn-light" style="color: #FFA500">English</a>
-			    	</div>
-			    </div>
-			    <div class="col-md-4" style="margin-top: 20px">
-			    	<div class="btn-group">
 			    		<a href="#" role="button" class="btn btn-light">한국어</a>
-			    	</div>
-			    </div>
-			    <div class="col-md-4" style="margin-top: 20px">
-			    	<div class="btn-group">
 			    		<a href="#" role="button" class="btn btn-light">Español</a>
 			    	</div>
 			    </div>
