--- a/projects.html
+++ b/projects.html
@@ -51,21 +51,18 @@
 	<!-- Purple top jumbotron with my name and links to the three pages. -->
 	<div class="jumbotron jumbotron-fluid" style="text-align: center">
 		<h1 class="display-3">Jason Kim</h1>
-		<div class="container-fluid">
+		<div class="container">
 			<!-- Trick to reduce bottom margin of jumbotron -->
 			<div class="row" style="margin-bottom: -10px">
-				<!-- Two filler cols of width 3 to 'center' the links as much as possible -->
-				<div class="col-lg-3"></div>
-				<div class="col-lg-2">
+				<div class="col-sm-4">
 					<a class="nav-link" href="index.html"><h3>Information</h3></a>
 				</div>
-				<div class="col-lg-2">
+				<div class="col-sm-4">
 					<a class="nav-link" href="coursework.html"><h3>Academics</h3></a>
 				</div>
-				<div class="col-lg-2">
+				<div class="col-sm-4">
 					<a class="nav-link" href="projects.html" style="color: #FFA500"><h3>Projects</h3></a>
 				</div>
-				<div class="col-lg-3"></div>
 			</div>
 		</div>
 	</div>
