--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Jason Kim</title>
 	<meta charset="utf-8">
 	<!-- Links and scripts for Bootstrap 4 -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -27,22 +27,27 @@
 			margin-right: 50px;
 		}
 		/* Default and hover colors for nav links */
-		#nav {
+		.navi {
 			color: white;
 		}
-		#nav:hover {
+		.navi:hover {
 			color: #FFA500;
 		}
-		#link {
+		/* For contact links*/
+		.link {
 			background-color: #F5F5F5;
 			color: black;
+			margin-top: 10px;
 		}
-		#link:hover {
+		.link:hover {
 			color: #FFA500;
+			margin-top: 10px;
 		}
+		/* No hover and action for phone number */
 		#link-cell {
 			background-color: #F5F5F5;
 			color: black;
+			margin-top: 10px;
 		}
 		.jumbotron {
 			background-color: black;
@@ -51,90 +56,96 @@
 			background-size: cover;
 			height: 100%;
 			width: 100%;
+			text-align: center;
 		}
 	</style>
 </head>
 <body>
 	<!-- Purple top jumbotron with my name and links to the three pages. -->
-	<div class="jumbotron jumbotron-fluid" style="text-align: center">
+	<div class="jumbotron jumbotron-fluid">
 		<h1 class="display-3">Jason Kim</h1>
 		<div class="container">
 			<!-- Trick to reduce bottom margin of jumbotron -->
 			<div class="row" style="margin-bottom: -10px">
 				<div class="col-sm-4">
-					<a class="nav-link" id="nav" href="index.html" style="color: #FFA500"><h3>Information</h3></a>
+					<a class="nav-link navi" href="index.html" style="color: #FFA500"><h3>Information</h3></a>
 				</div>
 				<div class="col-sm-4">
-					<a class="nav-link" id="nav" href="coursework.html"><h3>Academics</h3></a>
+					<a class="nav-link navi" href="coursework.html"><h3>Academics</h3></a>
 				</div>
 				<div class="col-sm-4">
-					<a class="nav-link" id="nav" href="projects.html"><h3>Projects</h3></a>
+					<a class="nav-link navi" href="projects.html"><h3>Projects</h3></a>
 				</div>
 			</div>
 		</div>
 	</div>
-
-<!-- Stuff to work on for tomorrow -->
-
-<div class="container" style="margin-top:30px; margin-bottom: 60px">
-  <div class="row">
-    <div class="col-md-4" style="text-align: center">
-    	<div class="col-md-12">
-		  <img src="img/profile.JPG" class="img-fluid" alt="Profile Picture" style="border: 5px solid">
-		  <hr>
-		  <h3>Contact me:</h3>
-		  <ul class="nav nav-pills flex-column" style="margin: auto">
-		    <li class="nav-item">
-		      <a class="nav-link active" id="link-cell" style="margin-top: 10px"><b>+1 (224) 200-6674</b></a>
-		    </li>
-		    <li class="nav-item">
-		      <a class="nav-link active" id="link" href="mailto:nosajmik@umich.edu" style="margin-top: 10px"><b>nosajmik@umich.edu</b></a>
-		    </li>
-		    <li class="nav-item">
-		      <a class="nav-link" id="link" href="files/resume.pdf" style="margin-top: 10px" download><b>Resume</b></a>
-		    </li>
-		    <li class="nav-item">
-		      <a class="nav-link" id="link" href="https://github.com/jasonkimprojects" style="margin-top: 10px"><b>GitHub</b></a>
-		    </li>
-		    <li class="nav-item">
-		      <a class="nav-link" id="link" href="https://www.linkedin.com/in/nosajmik" style="margin-top: 10px"><b>LinkedIn</b></a>
-		    </li>
-		    <li class="nav-item">
-		      <a class="nav-link" id="link" href="https://keybase.io/nosajmik" style="margin-top: 10px"><b>Keybase</b></a>
-		    </li>
-		  </ul>
-		  <hr class="d-md-none" style="margin-bottom: 30px">
-		</div>
-    </div>
-    <div class="col-md-8">
-    	<div class="col-md-12">
-	      <h2 style="color: #FFA500">Hi, I'm Jason!</h2>
-	      <p>For official purposes, my legal first name is Jong Sung. I go by Jason, nevertheless, for two reasons: it’s easier to pronounce, and most websites that parse my name delimit the space and call me Jong. Call me by whatever is easiest for you! My pronouns are <b>he, him, and his.</b></p>
-	      <br>
-	      <h2>I'm a Junior</h2>
-	      <p>At the University of Michigan in Ann Arbor, MI. I study Computer Science through the College of Engineering, and minor in Biology through the College of Literature, Science, and the Arts. I am passionate about cybersecurity and medical software development. (bioinformatics, computer vision and ML, databases, etc.)</p>
-	      <br>
-	      <h2>I develop</h2>
-	      <p>In C++, C, and Java proficiently. I have been picking up lots of Python recently from academic projects. Writing this website has improved my HTML and CSS skills. Some more languages that I speak here and there are Bash, MATLAB, JavaScript, SQL, and some flavors of assembly (x86, MIPS, ARMv8).</p>
-	      <br>
-	      <h2>My website</h2>
-	      <p>Is also available in 한국어 (Korean), my mother tongue alongside English, as well as Español (Spanish) which I <i>kind of</i> speak. Feel free to grab a copy of my resume or contact me through the links on the left!</p>
-	      <div class="container" style="text-align: center; margin-top: 50px; margin-bottom: 30px">
-	      	<div class="row">
-	      		<div class="col-md-12">
-			    	<div class="btn-group">
-			    		<a href="#" role="button" class="btn btn-light" style="color: #FFA500">English</a>
-			    		<a href="#" role="button" class="btn btn-light">한국어</a>
-			    		<a href="#" role="button" class="btn btn-light">Español</a>
-			    	</div>
-			    </div>
+	<!-- Rest of webpage -->
+	<div class="container" style="margin-top:30px; margin-bottom: 60px">
+	  	<div class="row">
+	  		<!-- Profile picture and contact me -->
+		    <div class="col-md-4" style="text-align: center">
+		    	<!-- Trick to space out the left column from the right -->
+		    	<div class="col-md-12">
+					<img src="img/profile.JPG" class="img-fluid" alt="Profile Picture" style="border: 5px solid">
+					<hr>
+					<h3>Contact me:</h3>
+					<!-- Buttons for contact info plus resume -->
+					<ul class="nav nav-pills flex-column" style="margin: auto">
+						<li class="nav-item">
+						  <a class="nav-link" id="link-cell"><b>+1 (224) 200-6674</b></a>
+						</li>
+						<li class="nav-item">
+						  <a class="nav-link link" href="mailto:nosajmik@umich.edu"><b>nosajmik@umich.edu</b></a>
+						</li>
+						<li class="nav-item">
+						  <a class="nav-link link" href="files/resume.pdf" download><b>Resume</b></a>
+						</li>
+						<li class="nav-item">
+						  <a class="nav-link link" href="https://github.com/jasonkimprojects"><b>GitHub</b></a>
+						</li>
+						<li class="nav-item">
+						  <a class="nav-link link" href="https://www.linkedin.com/in/nosajmik"><b>LinkedIn</b></a>
+						</li>
+						<li class="nav-item">
+						  <a class="nav-link link" href="https://keybase.io/nosajmik"><b>Keybase</b></a>
+						</li>
+					</ul>
+					<!-- Only show line on small screens -->
+					<hr class="d-md-none" style="margin-bottom: 30px">
+				</div>
 		    </div>
-		  </div>
-	      <hr>
-	      <h6><small>Background image credits: Hedaetul Islam (<a href="https://www.pexels.com/@hedaetul">https://www.pexels.com/@hedaetul)</a></small></h6>
-	      <h6><small>Made from scratch with passion, with the help of Bootstrap for mobile and desktop compatibility.</small></h6>
-	  </div>
-  	</div>
-</div>
+		    <!-- Paragraphs -->
+		    <div class="col-md-8">
+		    	<div class="col-md-12">
+					<h2 style="color: #FFA500">Hi, I'm Jason!</h2>
+					<p>For official purposes, my legal first name is Jong Sung. I go by Jason, nevertheless, for two reasons: it’s easier to pronounce, and most websites that parse my name delimit the space and call me Jong. Call me by whatever is easiest for you! My pronouns are <b>he, him, and his.</b></p>
+					<br>
+					<h2>I'm a Junior</h2>
+					<p>At the University of Michigan in Ann Arbor, MI. I study Computer Science through the College of Engineering, and minor in Biology through the College of Literature, Science, and the Arts. I am passionate about cybersecurity and medical software development. (bioinformatics, computer vision and ML, databases, etc.)</p>
+					<br>
+					<h2>I develop</h2>
+					<p>In C++, C, and Java proficiently. I have been picking up lots of Python recently from academic projects. Writing this website has improved my HTML and CSS skills. Some more languages that I speak here and there are Bash, MATLAB, JavaScript, SQL, and some flavors of assembly (x86, MIPS, ARMv8).</p>
+					<br>
+					<h2>My website</h2>
+					<p>Is also available in 한국어 (Korean), my mother tongue alongside English, as well as Español (Spanish) which I <i>kind of</i> speak. Feel free to grab a copy of my resume or contact me through the links on the left!</p>
+					<!-- Language selector buttons -->
+					<div class="container" style="text-align: center; margin-top: 50px; margin-bottom: 30px">
+						<div class="row">
+							<div class="col-md-12">
+						    	<div class="btn-group">
+						    		<a href="#" role="button" class="btn btn-light" style="color: #FFA500">English</a>
+						    		<a href="#" role="button" class="btn btn-light">한국어</a>
+						    		<a href="#" role="button" class="btn btn-light">Español</a>
+						    	</div>
+						    </div>
+					    </div>
+					</div>
+					<hr>
+					<h6><small>Background image credits: Hedaetul Islam (<a href="https://www.pexels.com/@hedaetul">https://www.pexels.com/@hedaetul)</a></small></h6>
+					<h6><small>Made from scratch with passion, with the help of Bootstrap for mobile and desktop compatibility.</small></h6>
+		  		</div>
+		  	</div>
+  		</div>
+	</div>
 </body>
 </html>
