--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 	<title>Jason Kim</title>
 	<meta charset="utf-8">
 	<!-- Links and scripts for Bootstrap 4 -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -45,6 +45,15 @@
 			height: 100%;
 			width: 100%;
 		}
+		.project {
+			margin-top: 30px;
+		}
+		.name {
+			color: orange;
+		}
+		.name:hover {
+			color: orange;
+		}
 	</style>
 </head>
 <body>
@@ -70,68 +79,102 @@
 	<div class="container" style="margin-top:30px; margin-bottom: 30px">
 		<div class="row">
 			<div class="col">
+				<!-- Header for project description -->
 				<div class="alert alert-success">
 					<p style="margin-bottom: 0px">The following is a list of my personal projects and group projects where I have contributed significantly. Their source code can be viewed <a href="https://github.com/jasonkimprojects?tab=repositories" style="color: orange">here</a> in my GitHub account. Clicking on the title of each project links to its repository.</p>
 				</div>
 			</div>
 		</div>
-		<div class="row" style="margin-top:30px">
+		<div class="row project">
 			<div class="col">
 				<h1><b>Personal Projects</b></h1>
 				<hr>
 			</div>
 		</div>
-		<div class="row" style="margin-top:30px">
+		<div class="row project">
 			<div class="col">
-				<h3><a href="https://github.com/jasonkimprojects/bitmapparser" style="color: orange">BitmapParser (C++)</a></h3>
-				<h6><span class="badge badge-light">Library</span> <span class="badge badge-light">File I/O</span> <span class="badge badge-light">Image processing</span> <span class="badge badge-light">Data structures</span> <span class="badge badge-light">Error handling</span> <span class="badge badge-light">Object oriented programming</span></h6>
+				<h3><a href="https://github.com/jasonkimprojects/bitmapparser" class="name">BitmapParser (C++)</a></h3>
+				<h6>
+					<span class="badge badge-light">Library</span> 
+					<span class="badge badge-light">File I/O</span> 
+					<span class="badge badge-light">Image processing</span> 
+					<span class="badge badge-light">Data structures</span> 
+					<span class="badge badge-light">Error handling</span> 
+					<span class="badge badge-light">Object oriented programming</span>
+				</h6>
 				<p>A short library for bitmap image reading and writing. Contains basic image editing functions (reflection, transposition, rotation, crop, superimpose, color filters). Useful for extracting pixels and their RGB values as vectors of structs of plain old data.</p>
 			</div>
 		</div>
-		<div class="row" style="margin-top:30px">
+		<div class="row project">
 			<div class="col">
-				<h3><a href="https://github.com/jasonkimprojects/easylsb" style="color: orange">EasyLSB (C++)</a></h3>
-				<h6><span class="badge badge-light">Steganography</span> <span class="badge badge-light">Least significant bit</span> <span class="badge badge-light">Bit manipulation</span> <span class="badge badge-light">Error handling</span> <span class="badge badge-light">Inheritance</span> <span class="badge badge-light">Custom iterator</span></h6>
+				<h3><a href="https://github.com/jasonkimprojects/easylsb" class="name">EasyLSB (C++)</a></h3>
+				<h6>
+					<span class="badge badge-light">Steganography</span> 
+					<span class="badge badge-light">Least significant bit</span> 
+					<span class="badge badge-light">Bit manipulation</span> 
+					<span class="badge badge-light">Error handling</span> 
+					<span class="badge badge-light">Inheritance</span> 
+					<span class="badge badge-light">Custom iterator</span>
+				</h6>
 				<p>A program for encoding and decoding text messages inside bitmap images using least significant bit steganography. Results in little to no visible difference in the image. Includes my BitmapParser library.</p>
 			</div>
 		</div>
-		<div class="row" style="margin-top:30px">
+		<div class="row project">
 			<div class="col">
-				<h3><a href="https://github.com/jasonkimprojects/jasonkimprojects.github.io" style="color: orange">jasonkimprojects.github.io (HTML, CSS, Bootstrap)</a></h3>
+				<h3><a href="https://github.com/jasonkimprojects/jasonkimprojects.github.io" class="name">jasonkimprojects.github.io (HTML, CSS, Bootstrap)</a></h3>
 				<p>This website. Contains links to my GitHub and LinkedIn profile and resume. Overview of my academic and personal work.</p>
 			</div>
 		</div>
-		<div class="row" style="margin-top:30px">
+		<div class="row project">
 			<div class="col">
-				<h3><a href="https://github.com/jasonkimprojects/htc-evo-4gplus-evolved" style="color: orange">Evo(lved) (Android)</a></h3>
-				<h6><span class="badge badge-light">Custom firmware</span> <span class="badge badge-light">Scripting</span> <span class="badge badge-light">Linux</span> <span class="badge badge-light">Optimization</span></h6>
+				<h3><a href="https://github.com/jasonkimprojects/htc-evo-4gplus-evolved" class="name">Evo(lved) (Android)</a></h3>
+				<h6>
+					<span class="badge badge-light">Custom firmware</span> 
+					<span class="badge badge-light">Scripting</span> 
+					<span class="badge badge-light">Linux</span> 
+					<span class="badge badge-light">Optimization</span>
+				</h6>
 				<p>ROM for my first smartphone, the HTC Evo 4G+. Android 2.3 Gingerbread based on stock firmware.</p>
 			</div>
 		</div>		
-		<div class="row" style="margin-top:30px">
+		<div class="row project">
 			<div class="col">
 				<h1><b>Group Projects</b></h1>
 				<hr>
 			</div>
 		</div>
-		<div class="row" style="margin-top:30px">
+		<div class="row project">
 			<div class="col">
-				<h3><a href="https://github.com/jasonkimprojects/2048-and-pong-from-scratch" style="color: orange">2048 (Java, Swing)</a></h3>
-				<h6><span class="badge badge-light">Games</span> <span class="badge badge-light">Matrix operations</span> <span class="badge badge-light">GUI programming</span> <span class="badge badge-light">Listeners</span></h6>
+				<h3><a href="https://github.com/jasonkimprojects/2048-and-pong-from-scratch" class="name">2048 (Java, Swing)</a></h3>
+				<h6>
+					<span class="badge badge-light">Games</span> 
+					<span class="badge badge-light">Matrix operations</span> 
+					<span class="badge badge-light">GUI programming</span> 
+					<span class="badge badge-light">Listeners</span>
+				</h6>
 				<p>First part of AP Computer Science final project during high school. Replica of the original game built from scratch. Exercise for graphics with the Swing widget toolkit and listening to keyboard inputs.</p>
 			</div>
 		</div>
-		<div class="row" style="margin-top:30px">
+		<div class="row project">
 			<div class="col">
-				<h3><a href="https://github.com/jasonkimprojects/2048-and-pong-from-scratch" style="color: orange">Pong (Java, Swing)</a></h3>
-				<h6><span class="badge badge-light">Games</span> <span class="badge badge-light">GUI programming</span> <span class="badge badge-light">Listeners</span></h6>
+				<h3><a href="https://github.com/jasonkimprojects/2048-and-pong-from-scratch" class="name">Pong (Java, Swing)</a></h3>
+				<h6>
+					<span class="badge badge-light">Games</span> 
+					<span class="badge badge-light">GUI programming</span> 
+					<span class="badge badge-light">Listeners</span>
+				</h6>
 				<p>Second part of AP Computer Science final project during high school. Replica of the original game, also built from scratch. Another exercise for making graphical games and handling keyboard input.</p>
 			</div>
 		</div>
-		<div class="row" style="margin-top:30px">
+		<div class="row project">
 			<div class="col">
-				<h3><a href="https://github.com/jasonkimprojects/java-blackjack" style="color: orange">Blackjack (Java)</a></h3>
-				<h6><span class="badge badge-light">Object oriented programming</span> <span class="badge badge-light">Testing</span> <span class="badge badge-light">Data structures</span> <span class="badge badge-light">Exception handling</span></h6>
+				<h3><a href="https://github.com/jasonkimprojects/java-blackjack" class="name">Blackjack (Java)</a></h3>
+				<h6>
+					<span class="badge badge-light">Object oriented programming</span> 
+					<span class="badge badge-light">Testing</span> 
+					<span class="badge badge-light">Data structures</span> 
+					<span class="badge badge-light">Exception handling</span>
+				</h6>
 				<p>Yet another AP Computer Science project, and the first game I made from scratch. Played on the command line, and supports multiple human players as well as naive computer players.</p>
 			</div>
 		</div>
