English version complete

--- a/coursework.html
+++ b/coursework.html
@@ -42,17 +42,17 @@
 			margin-top: -10px;
 			background-image: url("img/test.jpg");
 			background-size: cover;
-			height: 100%;
-			width: 100%;
+			text-align: center;
+			padding-bottom: 30px;
 		}
 		.course {
 			margin-top: 30px;
 		}
 		.syllabus {
-			color: orange;
+			color: #FFA500;
 		}
 		.syllabus:hover {
-			color: orange;
+			color: #FFA500;
 		}
 	</style>
 </head>
@@ -81,7 +81,7 @@
 			<div class="col">
 				<!-- Header for coursework description -->
 				<div class="alert alert-success">
-					<p style="margin-bottom: 0px">The following is a list of the courses I have taken at the <a href="https://umich.edu" style="color: orange">University of Michigan.</a> I have listed programming projects alongside each course where applicable. I am bound by the Engineering Honor Code at U-M not to release those projects to the public. Consequently, a brief description of the work is the furthest extent that I am able to disclose. For more information, click <a href="https://elc.engin.umich.edu/policies-and-interpretations/" style="color: orange">here.</a></p>
+					<p style="margin-bottom: 0px">The following is a list of the courses I have taken at the <a href="https://umich.edu" style="color: #FFA500">University of Michigan.</a> I have listed programming projects alongside each course where applicable. I am bound by the Engineering Honor Code at U-M not to release those projects to the public. Consequently, a brief description of the work is the furthest extent that I am able to disclose. For more information, click <a href="https://elc.engin.umich.edu/policies-and-interpretations/" style="color: #FFA500">here.</a></p>
 				</div>
 			</div>
 		</div>
