--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
 			margin-top: -10px;
 			background-image: url("img/test.jpg");
 			background-size: cover;
-			height: 100%;
-			width: 100%;
 			text-align: center;
+			padding-bottom: 30px;
 		}
 	</style>
 </head>
