--- a/projects.html
+++ b/projects.html
@@ -42,17 +42,17 @@
 			margin-top: -10px;
 			background-image: url("img/test.jpg");
 			background-size: cover;
-			height: 100%;
-			width: 100%;
+			text-align: center;
+			padding-bottom: 30px;
 		}
 		.project {
 			margin-top: 30px;
 		}
 		.name {
-			color: orange;
+			color: #FFA500;
 		}
 		.name:hover {
-			color: orange;
+			color: #FFA500;
 		}
 	</style>
 </head>
@@ -81,7 +81,7 @@
 			<div class="col">
 				<!-- Header for project description -->
 				<div class="alert alert-success">
-					<p style="margin-bottom: 0px">The following is a list of my personal projects and group projects where I have contributed significantly. Their source code can be viewed <a href="https://github.com/jasonkimprojects?tab=repositories" style="color: orange">here</a> in my GitHub account. Clicking on the title of each project links to its repository.</p>
+					<p style="margin-bottom: 0px">The following is a list of my personal projects and group projects where I have contributed significantly. Their source code can be viewed <a href="https://github.com/jasonkimprojects?tab=repositories" style="color: #FFA500">here</a> in my GitHub account. Clicking on the title of each project links to its repository.</p>
 				</div>
 			</div>
 		</div>
