Final English Version

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
 			padding-top: 30px;
 			border-bottom: 5px solid;
 		}
+		.centered {
+			margin: auto;
+			max-width: 700px;
+		}
 	</style>
 </head>
 <body>
@@ -66,16 +70,18 @@
 	<div class="jumbotron jumbotron-fluid">
 		<h1 class="display-3">Jason Kim</h1>
 		<div class="container">
-			<!-- Trick to reduce bottom margin of jumbotron -->
-			<div class="row" style="margin-bottom: -10px">
-				<div class="col-sm-4">
-					<a class="nav-link navi" href="index.html" style="color: #FFA500"><h3>Information</h3></a>
-				</div>
-				<div class="col-sm-4">
-					<a class="nav-link navi" href="coursework.html"><h3>Academics</h3></a>
-				</div>
-				<div class="col-sm-4">
-					<a class="nav-link navi" href="projects.html"><h3>Projects</h3></a>
+			<div class="centered">
+				<!-- Trick to reduce bottom margin of jumbotron -->
+				<div class="row" style="margin-bottom: -10px">
+					<div class="col-sm-4">
+						<a class="nav-link navi" href="index.html" style="color: #FFA500"><h3>Information</h3></a>
+					</div>
+					<div class="col-sm-4">
+						<a class="nav-link navi" href="coursework.html"><h3>Academics</h3></a>
+					</div>
+					<div class="col-sm-4">
+						<a class="nav-link navi" href="projects.html"><h3>Projects</h3></a>
+					</div>
 				</div>
 			</div>
 		</div>
