--- a/coursework.html
+++ b/coursework.html
@@ -56,6 +56,10 @@
 		.syllabus:hover {
 			color: #FFA500;
 		}
+		.centered {
+			margin: auto;
+			max-width: 700px;
+		}
 	</style>
 </head>
 <body>
@@ -63,16 +67,18 @@
 	<div class="jumbotron jumbotron-fluid" style="text-align: center">
 		<h1 class="display-3">Jason Kim</h1>
 		<div class="container">
-			<!-- Trick to reduce bottom margin of jumbotron -->
-			<div class="row" style="margin-bottom: -10px">
-				<div class="col-sm-4">
-					<a class="nav-link" href="index.html"><h3>Information</h3></a>
-				</div>
-				<div class="col-sm-4">
-					<a class="nav-link" href="coursework.html" style="color: #FFA500"><h3>Academics</h3></a>
-				</div>
-				<div class="col-sm-4">
-					<a class="nav-link" href="projects.html"><h3>Projects</h3></a>
+			<div class="centered">
+				<!-- Trick to reduce bottom margin of jumbotron -->
+				<div class="row" style="margin-bottom: -10px">
+					<div class="col-sm-4">
+						<a class="nav-link" href="index.html"><h3>Information</h3></a>
+					</div>
+					<div class="col-sm-4">
+						<a class="nav-link" href="coursework.html" style="color: #FFA500"><h3>Academics</h3></a>
+					</div>
+					<div class="col-sm-4">
+						<a class="nav-link" href="projects.html"><h3>Projects</h3></a>
+					</div>
 				</div>
 			</div>
 		</div>
